--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,13 +1,18 @@
 .header {
-    height: 7rem;
+    height: 5rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-2);
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     display: flex;
     align-items: center;
 }
 
 .logo {
-    height: 3.25rem;
+    height: 2.25rem;
     margin-left: 2rem;
+}
+
+.header span {
+    margin-left: 1rem;
+    height: 700;
 }
