--- a/frontend/src/components/sidebar/Sidebar.css
+++ b/frontend/src/components/sidebar/Sidebar.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 45rem;
+/*     height: 45rem;*/
 }
 
 .side-nav {
@@ -65,4 +65,10 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+}
+
+.legal {
+    color: var(--color-grey-light-4);
+    text-align: center;
+    padding: 2.5rem;
 }
