--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,7 @@ body {
   font-weight: 400;
   line-height: 1.6rem;
   color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary-light),var(--color-primary-dark));
+  background-image: linear-gradient(to right bottom, var(--color-grey-light-1),var(--color-primary-light));
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
