--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #FF3366;
-  --color-primary-dark: #BA265D;
+  --color-primary: #00b894;
+  --color-primary-light: #18ecc2;
+  --color-primary-dark: #069175;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
